--- a/proj.win32/MyGame.vcxproj.filters
+++ b/proj.win32/MyGame.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\Classes\MenuGame.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\PlayGame.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -36,6 +39,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\MenuGame.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\PlayGame.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
