--- a/proj.win32/MyGame.vcxproj
+++ b/proj.win32/MyGame.vcxproj
@@ -151,12 +151,14 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\MenuGame.cpp" />
+    <ClCompile Include="..\Classes\PlayGame.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\MenuGame.h" />
+    <ClInclude Include="..\Classes\PlayGame.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
