--- a/proj.win32/GamePlanes.vcxproj
+++ b/proj.win32/GamePlanes.vcxproj
@@ -149,15 +149,19 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\Bullet.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\Object.cpp" />
+    <ClCompile Include="..\Classes\Planes.cpp" />
     <ClCompile Include="..\Classes\Rock.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\Bullet.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\Object.h" />
+    <ClInclude Include="..\Classes\Planes.h" />
     <ClInclude Include="..\Classes\Rock.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
